most changes done, color contrast on landing still an issue

--- a/css/style.css
+++ b/css/style.css
@@ -24,9 +24,9 @@ body {
 
 /***** Reuseable Components ******/
 
-h1 {
+/* h1 {
   text-align:center;
-}
+} */
 
 h2 {
   text-align: center;
@@ -141,22 +141,25 @@ main div {
 .item1 {
   /* color: hsl(150, 48%, 79%); */
   color: #f0eec8;
-  font-size: 250%;
+  font-size: 260%;
   text-align: center;
 }
 
 .item1 h1 {
   text-transform: uppercase;
   font-weight: 100;
-  letter-spacing: 1px;
+  letter-spacing: 2px;
+  word-spacing: 20px;
 }
 
-.item1 p {
+#about-me {
+  list-style: none;
   text-align: left;
-  font-size: 60%;
+  font-size: 70%;
   line-height: 175%;
-  font-weight: 600;
+  font-weight: 400;
 }
+
 
 /*-----WORK-----*/
 
@@ -283,40 +286,13 @@ section {
   font-size: 50px;
 }
 
-.igit:link,
-.igit:visited {
-  transition: .5s;
-}
-
-.igit:hover {
-  color: #999;
-}
-
-.icode:link,
-.icode:visited {
-  transition: .5s;
-}
-
-.icode:hover {
-  color: white;
-}
-
-.ifree:link,
-.ifree:visited {
-  transition: .5s;
-}
-
-.ifree:hover {
-  color: darkgreen;
-}
-
-.ilink:link,
-.ilink:visited {
+.contact-icon:link,
+.contact-icon:visited {
   transition: 0.5s;
 }
 
-.ilink:hover {
-  color: #0077b5;
+.contact-icon:hover {
+  color: white;
 }
 
 footer {
